--- a/css/style.css
+++ b/css/style.css
@@ -170,6 +170,22 @@ body {
   @media screen and (max-width: 1199px) {
     .main-footer {
       text-align: center; } }
+  .main-footer__wrap {
+    position: relative; }
+  .main-footer .footer-top {
+    position: absolute;
+    right: 0;
+    top: -13rem;
+    width: 60px;
+    height: 60px;
+    border-radius: 10px;
+    -webkit-box-shadow: 0px 1px 10px 1px rgba(0, 0, 0, 0.3);
+    -moz-box-shadow: 0px 1px 10px 1px rgba(0, 0, 0, 0.3);
+    box-shadow: 0px 1px 10px 1px rgba(0, 0, 0, 0.3); }
+    .main-footer .footer-top img {
+      display: block;
+      margin: 0 auto;
+      transform: translateY(50%); }
   .main-footer .col-md-6 {
     padding: 0; }
   .main-footer .col-md-4 {
@@ -221,6 +237,41 @@ body {
   .navbar-nav li a:active {
     color: #000;
     background-color: transparent; }
+
+.side-pills {
+  position: fixed;
+  top: 120px;
+  right: -10px;
+  writing-mode: vertical-rl;
+  transform: rotate(180deg);
+  z-index: 1000; }
+  .side-pills__img {
+    height: 25px;
+    margin-bottom: 1rem;
+    vertical-align: text-top; }
+    .side-pills__img--basket {
+      transform: rotate(90deg); }
+    .side-pills__img--contacts {
+      transform: rotate(180deg); }
+  .side-pills .side-pill {
+    margin-bottom: 15px; }
+    .side-pills .side-pill a {
+      font-family: 'Rounds';
+      font-size: 2rem;
+      line-height: 1;
+      color: #fff; }
+    .side-pills .side-pill span {
+      vertical-align: text-top;
+      font-family: 'Plainot';
+      width: 25px;
+      height: 25px;
+      border-radius: 50%;
+      background-color: #fff;
+      color: #000; }
+    .side-pills .side-pill--orange {
+      background-color: #fdc107; }
+    .side-pills .side-pill--red {
+      background-color: #ed491c; }
 
 .main {
   margin-bottom: 4rem; }
