--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -8,6 +8,28 @@
 		text-align: center;
 	}
 
+	&__wrap {
+		position: relative;
+	}
+
+	& .footer-top {
+		position: absolute;
+		right: 0;
+		top: -13rem;
+		width: 60px;
+		height: 60px;
+		border-radius: 10px;
+		-webkit-box-shadow: 0px 1px 10px 1px rgba(0, 0, 0, 0.3);
+		-moz-box-shadow: 0px 1px 10px 1px rgba(0, 0, 0, 0.3);
+		box-shadow: 0px 1px 10px 1px rgba(0, 0, 0, 0.3);
+
+		img {
+			display: block;
+			margin: 0 auto;
+			transform: translateY(50%);
+		}
+	}
+
 	& .col-md-6 {
 		padding: 0;
 	}
