--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -50,7 +50,7 @@
 	z-index: 1000;
 
 	&__img {
-		height: 25px;
+		height: 15px;
 		margin-bottom: 1rem;
 		vertical-align: text-top;
 
@@ -67,7 +67,7 @@
 		a {
 			font: {
 				family: 'Rounds';
-				size: 2rem;
+				size: 1.5rem;
 			}
 			line-height: 1;
 			color: $color-white;
@@ -76,11 +76,12 @@
 		span {
 			vertical-align: text-top;
 			font-family: 'Plainot';
-			width: 25px;
-			height: 25px;
+			width: 20px;
+			height: 20px;
 			border-radius: 50%;
 			background-color: $color-white;
 			color: $color-black;
+			line-height: 0.8;
 		}
 
 		&--orange {
