--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -248,6 +248,32 @@
 			background-size: cover;
 		}
 	}
+
+	&-list {
+		.list-group-item {
+			color: $color-black;
+			font-size: 2rem;
+
+			& img {
+				margin-right: 2rem;
+			}
+		}
+
+		.list-group-item:first-child {
+			border-top-left-radius: 10px;
+			border-top-right-radius: 10px;
+		}
+
+		.list-group-item:last-child {
+			border-bottom-right-radius: 10px;
+			border-bottom-left-radius: 10px;
+		}
+
+		.list-group-item.active {
+			background-color: $color-primary;
+			border: none;
+		}
+	}
 }
 
 .contacts {
